[project]
name = "pytest-reporter-html"
version = "2.1.0"
description = "Pytest plugin that generates rich HTML test reports with step tracking, log capture, and interactive filtering"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Yevgeny Farber"},
    { name = "Avi Zaguri" },
]
keywords = ["pytest", "reporter", "html", "test-reporting", "test-report"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
]


dependencies = [
    "custom-python-logger>=1.0.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-plugins>=2.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
report_mode = "all"

[project.urls]
Homepage = "https://github.com/aviz92/pytest-reporter-html"
Repository = "https://github.com/aviz92/pytest-reporter-html"
Issues = "https://github.com/aviz92/pytest-reporter-html/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pytest_reporter_html"]

[tool.pytest11]
reporter-html = "pytest_reporter_html.plugin"
